<!--
  ~ Copyright (C) 2018 Clover Network, Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~
  ~ You may obtain a copy of the License at
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lighter_dark_grey"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
    <ImageView
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:id="@+id/logoView"
            android:src="@drawable/clover_logo"
            android:layout_above="@+id/radioGroup"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:scaleType="fitCenter"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/radioGroup">
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text=   "@string/usb_clover_connector"
                android:id="@+id/usbRadioButton"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                android:layout_alignLeft="@+id/lanRadioButton"
                android:layout_marginBottom="10dp"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/lan_pay_display"
                android:id="@+id/lanRadioButton"
                android:layout_below="@+id/usbRadioButton"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lanPayDisplayAddress"
                android:layout_below="@+id/lanRadioButton"
                android:layout_alignLeft="@+id/lanRadioButton"
                android:textColor="@color/white"
                android:layout_marginLeft="31dp"
                android:layout_alignRight="@+id/lanRadioButton"
                android:text="@string/lan_pay_address"
                android:maxLines="1"
                android:nestedScrollingEnabled="true"
                android:layout_marginBottom="15sp"
                android:inputType="textUri"/>
    </RadioGroup>
    <Button
            android:layout_marginTop="15sp"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:background="@drawable/button_border_padding_white"
            android:onClick="connect"
            android:padding="10dp"
            android:longClickable="true"
            android:textColor="@color/white"
            android:id="@+id/connectButton"
            android:layout_below="@+id/radioGroup"
            android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:id="@+id/checkboxRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_below="@id/connectButton"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
        >

        <CheckBox
            android:id="@+id/cbQUICKPAY"
            style="@style/StartupCheckbox"
            android:text="Quick Pay"/>
        <CheckBox
            android:id="@+id/cbVAS"
            style="@style/StartupCheckbox"
            android:text="VAS"/>
        <CheckBox
                android:id="@+id/cbPhone"
                style="@style/StartupCheckbox"
                android:text="Phone"/>
        <CheckBox
                android:id="@+id/cbId"
                style="@style/StartupCheckbox"
                android:text="ID"/>
        <CheckBox
                android:id="@+id/cbBarcode"
                style="@style/StartupCheckbox"
                android:text="Barcode"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vasInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/checkboxRow"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center_horizontal">

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="@color/white"
                      android:text="Enter your computer's IP Address: "/>

            <EditText android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="@color/white"
                      android:id="@+id/computer_ip_address"
                      android:singleLine="true"
                      android:hint="e.g., 10.249.255.217"/>
        </LinearLayout>

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content">

            <TextView android:layout_width="wrap_content"
                      android:textColor="@color/white"
                      android:layout_height="wrap_content"
                      android:text="Enter port number: "/>

            <EditText android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="@color/white"
                      android:singleLine="true"
                      android:id="@+id/computer_port"
                      android:hint="e.g., 8181"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
